Add refresh tokens and update tests